# rccl

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CppCheckSuppressions.txt  Dockerfile  Jenkinsfile  LICENSE  LICENSE.txt  Makefile  NOTICES.txt  README.md  build.sh  custom.properties  hipify.sh  install.sh  jenkinsfile  rtest.xml  toolchain-linux.cmake
.azuredevops/: rccl.yml  rocm-ci.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: issue_report.yml
.github/workflows/: docs.yaml
.jenkins/: common.groovy  extended.groovy  performance.groovy  precheckin.groovy  staticanalysis.groovy  staticlibrary.groovy
cmake/: Dependencies.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindIBVerbs.cmake  Findmscclpp_nccl.cmake  Generator.cmake  MSCCLPP.cmake  git_version.cmake  msccl-scheduler.cmake
cmake/scripts/: AddUnroll.cmake  add_unroll.sh  extract_metadata.cmake  git_version.cmake
doc/: Doxyfile.bak
docker/: Dockerfile.ubuntu  dockerfile-build-centos  dockerfile-build-ubuntu-rock  dockerfile-install-centos  dockerfile-install-ubuntu
docs/: .gitignore  Doxyfile  allapi.rst  attributions.rst  classification-maptest.xml  conf.py  index.rst  library-specification.rst  license.rst  run_doc.sh  run_doxygen.sh  what-is-rccl.rst
docs/.doxygen/: Doxyfile
docs/.sphinx/: _toc.yml.in  requirements.in  requirements.txt
docs/api-reference/: api-library.rst
docs/doxygen/: Doxyfile  mainpage.txt
docs/how-to/: using-nccl.rst
docs/install/: installation.rst
docs/source/: Makefile  allapi.rst  api.rst  attributions.rst  conf.py  index.rst  library.rst  real.rst
docs/sphinx/: _toc.yml.in  requirements.txt
ext-src/: cpx.patch  read-allred.patch
ext-tuner/: README.md
ext-tuner/example/: Makefile  plugin.c
inc/: rccl-version.h  rccl.h
inc/rccl/: rccl-version.h.in  rccl.h
samples/: allreduce.cpp
src/: CMakeLists.txt  Makefile  README.md  api_trace.cc  bootstrap.cc  channel.cc  collectives.cc  debug.cc  enqueue.cc  flow_export.cc  group.cc  init.cc  init.cu  init_nvtx.cc  msccl.cc  nccl.h.in  net.cc  proxy.cc  rccl.cpp  rcclAllGather.cpp  rcclAllGatherKernels.h  rcclAllGatherRuntime.h  rcclAllReduce.cpp  rcclAllReduceKernels.h  rcclAllReduceRuntime.h  rcclBarrierKernels.h  rcclBcast.cpp  rcclBroadCastKernels.h  rcclBroadCastRuntime.h  rcclBroadcastKernels.h  rcclBroadcastRuntime.h  rcclCheck.h  rcclDataTypes.h  rcclHelper.h  rcclKernelHelper.h  rcclKernels.h  rcclLog.h  rcclReduce.cpp  rcclReduceDeviceOps.h  rcclReduceKernels.h  (+21 more)
src/clique/: AllReduceCliqueKernel.h  CliqueCommon.h  CliqueCommonKernel.h  CliqueManager.cc  CliqueManager.h  CliqueShmNames.h  HandleCache.cc  HandleCache.h  HandleShm.cc  HandleShm.h  Hash.cc  Hash.h  MsgQueue.cc  MsgQueue.h  SharedMemHelper.h  ShmObject.cc  ShmObject.h
src/collectives/: all_gather.cc  all_gather.cu  all_gather_api.cc  all_reduce.cc  all_reduce.cu  all_reduce_api.cc  all_to_all.cc  all_to_all_api.cc  all_to_all_pivot_api.cc  all_to_allv.cc  all_to_allv_api.cc  broadcast.cc  broadcast.cu  broadcast_api.cc  collectives.h  gather.cc  gather_api.cc  msccl.cc  reduce.cc  reduce.cu  reduce_api.cc  reduce_scatter.cc  reduce_scatter.cu  reduce_scatter_api.cc  scatter.cc  scatter_api.cc  sendrecv.cc  sendrecv_api.cc
src/device/: all_gather.h  all_reduce.h  alltoall_pivot.h  broadcast.h  common.cu  common.h  common_kernel.h  generate.py  msccl_kernel_impl.h  non_caching_load.h  onerank.cu  op128.h  primitives.h  prims_ll.h  prims_ll128.h  prims_simple.h  reduce.h  reduce_kernel.h  reduce_scatter.h  sendrecv.h
src/graph/: connect.cc  paths.cc  rings.cc  rome_models.cc  rome_models.h  search.cc  topo.cc  topo.h  tuning.cc  xml.cc  xml.h
src/include/: BfdBacktrace.hpp  alloc.h  alt_rsmi.h  api_trace.h  archinfo.h  bootstrap.h  checks.h  collectives.h  comm.h  common_coll.h  core.h  debug.h  devcomm.h  device.h  enqueue.h  flow_export.h  gdrwrap.h  git_version.h  graph.h  group.h  (+29 more)
test/: AllGatherTests.cpp  AllGather_InPlace.cpp  AllGather_ManagedMem.cpp  AllGather_OutOfPlace.cpp  AllReduceTests.cpp  AllReduce_Clique.cpp  AllReduce_GroupCall.cpp  AllReduce_InPlace.cpp  AllReduce_ManagedMem.cpp  AllReduce_Msccl.cpp  AllReduce_NonBlockingConf.cpp  AllReduce_OutOfPlace.cpp  AllReduce_PreMultScalar.cpp  AllToAllTests.cpp  AllToAllVTests.cpp  AllToAll_ManagedMem.cpp  AllToAll_OutOfPlace.cpp  AllToAllv_OutOfPlace.cpp  BroadcastTests.cpp  Broadcast_InPlace.cpp  Broadcast_ManagedMem.cpp  Broadcast_OutOfPlace.cpp  CMakeLists.txt  CMakeLists.txt.in  CollectiveArgs.cpp  CollectiveArgs.hpp  CorrectnessTest.hpp  ErrCode.hpp  FlowExportTests.cpp  GatherTests.cpp  Gather_InPlace.cpp  Gather_ManagedMem.cpp  Gather_OutOfPlace.cpp  GroupCallTests.cpp  Multistream.cpp  NonBlockingTests.cpp  PrepDataFuncs.cpp  PrepDataFuncs.hpp  PtrUnion.cpp  PtrUnion.hpp  (+72 more)
test/common/: BfdBacktrace.hpp  CollectiveArgs.cpp  CollectiveArgs.hpp  EnvVars.cpp  EnvVars.hpp  ErrCode.hpp  PrepDataFuncs.cpp  PrepDataFuncs.hpp  PtrUnion.cpp  PtrUnion.hpp  StandaloneUtils.hpp  TestBed.cpp  TestBed.hpp  TestBedChild.cpp  TestBedChild.hpp  UnitTests  config.h.in  main.cpp
tests/: CMakeLists.txt  README.md  common.h  counts.h
tests/conformance/: Makefile  rcclCommInitAll.cpp
tests/coverage/: Makefile  rcclAllReduce.cpp
tests/performance/: Makefile  performance.h  rcclAllGather.cpp  rcclAllReduce.cpp  rcclBcast.cpp  rcclReduce.cpp  rcclReduceScatter.cpp  runDeepBench.sh
tests/performance/kernels/: Makefile  README.md  rcclBenchKernelCopy.cpp  rcclBenchWrite.cpp  rcclBenchWriteSize.cpp  rcclKernelCopy.cpp  rcclKernelReduceSum.cpp
tests/stress/: Makefile  rcclReduce.cpp
tests/unit/: CMakeLists.txt  rcclCommInitRank.cpp  rcclUniqueId.cpp
tests/validation/: .rcclReduce.cpp.swp  CMakeLists.txt  Makefile  rcclAllGather.cpp  rcclAllReduce.cpp  rcclBcast.cpp  rcclCommBcast.cpp  rcclMultiStream.cpp  rcclReduce.cpp  rcclReduceScatter.cpp  runDeepBench.sh  validate.h
tests/validation/kernels/: Makefile  rcclKernelCopy.cpp  rcclValidateKernelCopy.cpp
(+2361 files in other folders)
